# pyrinas-server-rs

./: .codecov.yaml  .env.sample  .gitignore  Architecture.md  Cargo.toml  Changelog.md  Config.example.toml  Cross.toml  LICENSE  Readme.md  Vagrantfile  config.example.toml  config.minimal.toml  config.toml.example  deny.toml  manfiest.example.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: rust.yml
.mainframer/: Readme.md  config.yml  ignore.yml
certs/: Cargo.toml
certs/src/: config.rs  main.rs
docs/: configuring-server.md  using-the-example.md
example/: Cargo.toml
example/src/: application.rs  main.rs
examples/client/: Cargo.toml
examples/server/: Cargo.toml
examples/tracker/: Cargo.toml
examples/tracker/provision/: certify.ts  provision.sh
lib-cli/: Cargo.toml  Readme.md
lib-cli/src/: certs.rs  config.rs  device.rs  git.rs  lib.rs  main.rs  ota.rs
lib-codec-example/: Cargo.toml  Readme.md
lib-codec-example/src/: lib.rs
lib-server/: Cargo.toml  Readme.md
lib-server/src/: admin.rs  broker.rs  bucket.rs  influx.rs  lib.rs  main.rs  mqtt.rs  ota.rs  ota_db.rs  settings.rs  sled.rs  sock.rs  telemetry.rs  tests.rs
lib-server/src/tests/: ota.rs
lib-server/tests/: ota.rs
lib-shared/: Cargo.toml  Readme.md
lib-shared/src/: lib.rs  ota.rs  settings.rs
lib-shared/src/ota/: v1.rs  v2.rs
