[package]
name = "certs"
version = "0.2.0"
authors = ["Jared Wolff <hello@jaredwolff.com>"]
edition = "2018"
publish = false
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcgen = { version = "0.8", features = ["x509-parser", "pem"] }
clap = "2.33"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
