[package]
authors = ["Jared Wolff <hello@jaredwolff.com>"]
edition = "2018"
name = "example"
version = "0.1.0"

[dependencies]
clap = "~3.0.0-beta.1" # CLI Library
env_logger = "^0.7" # logging message control using env variable
log = "^0.4.11" # logging messages
pyrinas-server = {path = "../lib-server/"}# Local shared for server bits 
pyrinas-shared = {path = "../lib-shared/"}# Local shared for settings, etc 
tokio = {version = "0.2.22", features = ["uds", "io-util"]}
