[package]
authors = ["Jared Wolff <hello@jaredwolff.com>"]
edition = "2018"
name = "example"
version = "0.1.0"

[dependencies]
clap = "3.0.0-beta.2" # CLI Library
env_logger = "0.8" # logging message control using env variable
log = "0.4" # logging messages
pyrinas-server = { path = "../lib-server/" }# Local shared for server bits 
tokio = { version = "0.2", features = ["uds", "io-util"] }
