[package]
authors = ["Jared Wolff <hello@jaredwolff.com>"]
edition = "2018"
name = "pyrinas-example"
version = "0.1.0"
license = "Apache-2.0"

[dependencies]
clap = "3.0.0-beta.2" # CLI Library
env_logger = "0.8" # logging message control using env variable
log = "0.4" # logging messages
tokio = { version = "1.0", features = ["net", "rt-multi-thread", "macros"] }
flume = "0.10" # async channel

# Runtime use. Use either `runtime_async_std` or `runtime_tokio`.
pyrinas-server = { path = "../lib-server/" }# Local shared for server bits (uses tokio by default)
# pyrinas-server = { path = "../lib-server/", default-features = false, features = ["runtime_async_std"] }# async_std use in pyrinas-server
