[package]
authors = ["Jared Wolff <hello@jaredwolff.com>"]
edition = "2018"
name = "pyrinas-cli"
version = "0.4.5"
license = "Apache-2.0"
description = "Companion CLI for Pyrinas Server. Used to remotely add OTA images."
repository = "https://github.com/pyrinas-iot/pyrinas-server-rs"
readme = "Readme.md"
keywords = ["ota", "mqtt", "iot"]

[[bin]]
name = "pyrinas"
path = "src/bin/example/cli.rs"

[dependencies]
pyrinas-shared = { version = "0.3.2", path = "../lib-shared/" }
chrono = "0.4" # Tracking time
clap = "3.0" # CLI Library (Needed?)
env_logger = "0.9" # logging message control using env variable
log = "0.4" # logging messages
serde = { version = "1.0", features = ["derive"] } # Serializing/deserializing  
serde_json = "^1.0" # For serialization of json
serde_cbor = "^0.11.0" # Serde specific CBOR serialize/deserialze
thiserror = "1.0" # Error handling
home = "0.5.3" # Get home directory 
toml = "0.5.8" # Serializing/deserializing configuration
tungstenite = { version = "0.17", features = [
    "rustls-tls-native-roots",
] } # Websocket client
git2 = "0.14" # Git describe for getting version
semver = "1.0" # Parsing version string
serialport = "4" # Connecting to serial port
promptly = "0.3.0" # Prompt
openssl = "0.10.40" # For cert generation
