[package]
name = "pyrinas-codec-example"
version = "0.1.0"
authors = ["Jared Wolff <hello@jaredwolff.com>"]
edition = "2021"

[lib]
crate-type = ["staticlib", "lib"] # C

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.123", default-features = false, features = ["derive"] }
minicbor = { git = "https://gitlab.com/jaredwolff/minicbor.git", branch = "add_naivedatetime_encode_decode", features = [
    "derive",
    "alloc",
    "std",
    "time",
] }

# Panic handler for v8 arm (nRF9160)
[target."thumbv8m.main-none-eabihf".dependencies]
panic-halt = "0.2.0"

[features]
default = ["std"]
std = []
