[package]
authors = ["Jared Wolff <hello@jaredwolff.com>"]
edition = "2018"
name = "pyrinas-server"
version = "0.4.3"
license = "Apache-2.0"
description = "IoT Server with built-in OTA support and data logging capabilities."
repository = "https://github.com/pyrinas-iot/pyrinas-server-rs"
readme = "Readme.md"
keywords = ["ota", "mqtt", "iot"]

[features]
default = ["use-native-tls"]
use-native-tls = ["rumqttd/use-native-tls"]
use-rustls = ["rumqttd/use-rustls"]

[dependencies]
pyrinas-shared = { version = "0.3.2", path = "../lib-shared/" } # Local shared for settings, etc 
clap = "3.0"                                                    # CLI Library
env_logger = "0.9"                                              # logging message control using env variable
influxdb = { version = "0.4", features = ["derive"] }           # InfluxDB access 
log = "0.4"                                                     # logging messages
rumqttd = { version = "0.11", default-features = false }        # Mqtt core bits
serde = { version = "1.0", features = ["derive"] }              # Serializing/deserializing 
serde_cbor = "0.11"                                             # Serde specific CBOR serialize/deserialze
serde_json = "1.0"                                              # Serializing/deserializing json
sled = "0.34"                                                   # Storing events as KV store
flume = "0.10.2"                                                # Channels
cfg-if = "1.0.0"                                                # Macro config
thiserror = "1.0"                                               # Error handling
futures = "0.3.13"                                              # Need to split WS
toml = "0.5.8"                                                  # for config purposes
chrono = "0.4"                                                  # for time


# Async
tokio = { version = "1.0", default-features = false, features = [
    "net",
    "rt",
    "macros",
    "io-util",
] } # async runtime
tokio-stream = { version = "0.1", features = [
    "net",
] } # tokio stream (removed from mainline tokio until future)
warp = { version = "0.3" } # Webserver for hosting OTA files
tokio-compat-02 = { version = "0.2.0" }
