[package]
authors = ["Jared Wolff <hello@jaredwolff.com>"]
edition = "2021"
name = "pyrinas-server"
version = "0.5.0"
license = "Apache-2.0"
description = "IoT Server with built-in OTA support and data logging capabilities."
repository = "https://github.com/pyrinas-iot/pyrinas-server-rs"
readme = "Readme.md"
keywords = ["ota", "mqtt", "iot"]

[features]
default = ["use-native-tls"]
use-native-tls = ["rumqttd/use-native-tls"]
use-rustls = ["rumqttd/use-rustls"]

[dependencies]
pyrinas-shared = { version = "0.5", path = "../lib-shared/" } # Local shared for settings, etc 
clap = "3.0" # CLI Library
env_logger = "0.9" # logging message control using env variable
influxdb = { version = "0.5", features = ["derive"] } # InfluxDB access 
log = "0.4" # logging messages
rumqttd = { default-features = false, git = "https://github.com/jaredwolff/rumqtt.git", branch = "rsa-detect" } # Mqtt core bits
serde = { version = "1.0", features = ["derive"] } # Serializing/deserializing
minicbor = { version = "0.18.0", features = [
    "derive",
    "alloc",
] } # Serde specific CBOR serialize/deserialze
sled = "0.34" # Storing events as KV store
flume = "0.10.2" # Channels
cfg-if = "1.0.0" # Macro config
thiserror = "1.0" # Error handling
futures = "0.3.13" # Need to split WS
toml = "0.5.8" # For config purposes
chrono = "0.4" # for time

# Async
tokio = { version = "1.0", default-features = false, features = [
    "net",
    "rt",
    "macros",
    "io-util",
] } # async runtime
tokio-tungstenite = "0.17.2"
