[package]
authors = ["Jared Wolff <hello@jaredwolff.com>"]
edition = "2018"
name = "pyrinas-shared"
version = "0.2.4"
license = "Apache-2.0"
description = "Shared files between Pyrinas CLI and Pyrinas Server."
repository = "https://github.com/pyrinas-iot/pyrinas-server-rs"
readme = "https://raw.githubusercontent.com/pyrinas-iot/pyrinas-server-rs/main/Readme.md"
keywords = ["ota", "mqtt", "iot"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] } # Serializing/deserializing
serde_repr = "0.1"
