[package]
authors = ["Jared Wolff <hello@jaredwolff.com>"]
edition = "2021"
name = "pyrinas-shared"
version = "0.5.0"
license = "Apache-2.0"
description = "Shared files between Pyrinas CLI and Pyrinas Server."
repository = "https://github.com/pyrinas-iot/pyrinas-server-rs"
readme = "Readme.md"
keywords = ["ota", "mqtt", "iot"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minicbor = { version = "0.18.0", features = ["derive", "alloc"] } # Cbor
clap = { version = "3.0", features = ["derive"] }                 # CLI Library
