[package]
name = "pyrinas-client-example"
version = "0.1.1"
authors = ["Jared Wolff <hello@jaredwolff.com>"]
edition = "2021"

[[bin]]
name = "pyrinas-client"
path = "src/bin/client.rs"

[dependencies]
pyrinas-codec-example = { version = "0.1", path = "../../lib-codec-example/" }

rumqttc = { git = "https://github.com/jaredwolff/rumqtt.git", branch = "rsa-detect" } # Mqtt client bits

clap = "3.0"                # CLI Library
tokio = { version = "1.0" } # async runtime

serde = { version = "1.0", features = ["derive"] } # Serializing/deserializing 
minicbor = { git = "https://gitlab.com/jaredwolff/minicbor.git", branch = "add_naivedatetime_encode_decode", features = [
    "derive",
    "alloc",
    "std",
    "time",
] }
