[package]
name = "pyrinas-server-tracker-example"
version = "0.1.2"
authors = ["Jared Wolff <hello@jaredwolff.com>"]
edition = "2021"

[[bin]]
name = "tracker"
path = "src/bin/server/server.rs"

[dependencies]
pyrinas-server = { path = "../../lib-server", default-features = false, features = [
    "use-rustls",
] }

flume = "0.10.2"            # Channels
clap = "3.0"                # CLI Library
env_logger = "0.9"          # logging message control using env variable
tokio = { version = "1.0" } # async runtime
log = "0.4"                 # logging messages

influxdb = { version = "0.5", features = ["derive"] } # InfluxDB access 
chrono = { version = "0.4", features = ["serde"] }    # Tracking time

serde = { version = "1.0", features = ["derive"] } # Serializing/deserializing 
minicbor = { git = "https://gitlab.com/jaredwolff/minicbor.git", branch = "add_naivedatetime_encode_decode", features = [
    "derive",
    "alloc",
    "std",
    "time",
] }
serde_json = "1.0" # Serde specific for JSON
